--- a/Scripts/fastlane/metadata/en-AU/release_notes.txt
+++ b/Scripts/fastlane/metadata/en-AU/release_notes.txt
@@ -1,2 +1,2 @@
-Improvements to the new Share Extension.
-New Jetpack setting: Speed up your site.
+A new share extension that adds support to save drafts and handles tags.
+Plugin management taken to the next level: you can now browse and install plugins.
