--- a/Scripts/fastlane/metadata/ru/release_notes.txt
+++ b/Scripts/fastlane/metadata/ru/release_notes.txt
@@ -1,2 +1,2 @@
-Улучшено новое расширение "Поделиться".
-Новая настройка Jetpack: Ускорить ваш сайт.
+Новое расширение "поделиться" добавляет поддержку для сохранения черновиков и поддерживает метки.
+Улучшено управление плагинами: теперь можно просматривать и устанавливать плагины.
