Updates latest metadata translations.

--- a/Scripts/fastlane/metadata/ru/release_notes.txt
+++ b/Scripts/fastlane/metadata/ru/release_notes.txt
@@ -1,2 +1,7 @@
-Новое расширение "поделиться" добавляет поддержку для сохранения черновиков и поддерживает метки.
-Улучшено управление плагинами: теперь можно просматривать и устанавливать плагины.
+Список записей, доступность: улучшение поддержки динамических шрифтов.
+Список записей: Статус и фильтрация по автору!
+Список записей, доступность: поддержка голосового ввода для фильтрациии в списке записей.
+Вход, доступность:  Улучшение поддержки динамического ввода.
+Меню, доступность: Поддержка динамического ввода в разделе меню.
+Мой профиль: Теперь есть прямая возможность отредактировать граватар.
+Spotlight: Индексация записей и страниц!
