--- a/Scripts/fastlane/metadata/sv/release_notes.txt
+++ b/Scripts/fastlane/metadata/sv/release_notes.txt
@@ -1,2 +1,7 @@
-En ny utökningsmodul för delning lägger till stöd för att spara utkast och hantera etiketter.
-Hantering av tillägg har blivit ett snäpp bättre: nu kan du söka och installera tillägg.
+Inläggslista, tillgänglighet: Nu hanterar inläggslistan dynamiska typsnitt bättre.
+Inläggslista: Ny filtreringslist för inläggsstatus och författare!
+Inläggslista, tillgänglighet: Den nya filtreringslisten för inläggsstatus och författare har stöd för VoiceOver.
+Inloggning, tillgänglighet: Inloggningslflödet hanterar nu dynamiska typsnitt bättre.
+Menyer, tillgänglighet: Nu har menyavsnittet av dina webbplatser stöd för dynamiska typsnitt.
+Min profil: Nu har du en direkt inställning för redigering av din Gravatar-profilbild.
+Spotlight: Nu indexeras inlägg och sidor!
