Updates the metadata and metadata version number.

--- a/WordPress/Resources/AppStoreStrings.po
+++ b/WordPress/Resources/AppStoreStrings.po
@@ -38,15 +38,11 @@ msgctxt "app_store_keywords"
 msgid "social networking, blogging, blogs, photos, writing, geotagging, media, blog, wordpress\n"
 msgstr ""
 
-msgctxt "v9.7-whats-new"
+msgctxt "v9.8-whats-new"
 msgid ""
-"List of Posts, Accessibility: The list of post now handles Dynamic Type fonts better.\n"
-"List of Posts: New post status and author filter bar!\n"
-"List of Posts, Accessibility: The new post status and author filter bar offers Voiceover support.\n"
-"Login, Accessibility: The login flow now handles Dynamic Type better.\n"
-"Menus, Accessibility: The Menu section of your sites now supports Dynamic Type.\n"
-"My Profile: You now have a more explicit option for editing your Gravatar icon.\n"
-"Spotlight: Now indexes posts and pages!\n"
+"Uploads are now asynchronous!\n"
+"Pages that fail to upload will now be marked red.\n"
+"The input field for writing comments can now grow up to 5 lines.\n"
 msgstr ""
 
 #. translators: This is a standard chunk of text used to tell a user what's new with a release when nothing major has changed.
