--- a/Scripts/fastlane/metadata/ko/release_notes.txt
+++ b/Scripts/fastlane/metadata/ko/release_notes.txt
@@ -1,7 +1,3 @@
-글 목록, 접근성: 이제 글 목록에서 동적 유형 글꼴이 더 잘 처리됩니다.
-글 목록: 새로운 글 상태 및 글쓴이 필터 바를 제공합니다!
-글 목록, 접근성: 새로운 글 상태 및 글쓴이 필터 바는 보이스오버 기능을 지원합니다.
-로그인, 접근성: 이제 로그인 절차에서 동적 유형을 더 잘 처리합니다.
-메뉴, 접근성: 이제 사이트의 메뉴 영역에서 동적 유형을 지원합니다.
-내 프로필: 이제 그라바타 아이콘 편집을 위한 더 명시적인 옵션을 제공합니다.
-스포트라이트: 이제 글과 페이지를 색인합니다!
+비동기 업로드 중입니다!
+업로드에 실패한 페이지는 빨간색으로 표시됩니다.
+메모 입력 필드를 다섯 줄까지 늘릴 수 있습니다.
