--- a/Scripts/fastlane/metadata/ru/release_notes.txt
+++ b/Scripts/fastlane/metadata/ru/release_notes.txt
@@ -1,7 +1,3 @@
-Список записей, доступность: улучшение поддержки динамических шрифтов.
-Список записей: Статус и фильтрация по автору!
-Список записей, доступность: поддержка голосового ввода для фильтрациии в списке записей.
-Вход, доступность:  Улучшение поддержки динамического ввода.
-Меню, доступность: Поддержка динамического ввода в разделе меню.
-Мой профиль: Теперь есть прямая возможность отредактировать граватар.
-Spotlight: Индексация записей и страниц!
+Загрузки теперь асинхронны!
+Страницы, незагрузившиеся с ошибкой теперь помечены красным.
+Поле ввода комментариев может увеличиваться до 5 строк.
