--- a/Scripts/fastlane/metadata/id/release_notes.txt
+++ b/Scripts/fastlane/metadata/id/release_notes.txt
@@ -1,7 +1,3 @@
-Daftar Pos, Aksesibilitas: Daftar pos sekarang menangani font Jenis Dinamis dengan lebih baik.
-Daftar Pos: Status pos baru dan bilah penyaring penulis!
-Daftar Pos, Aksesibilitas: Status pos baru dan bilah penyaring penulis menawarkan dukungan Pengisi Suara.
-Login, Aksesbilitas: Alur login sekarang menangani Jenis Dinamis dengan lebih baik.
-Menu, Aksesbilitas: Bagian menu pada situs Anda sekarang mendukung Jenis Dinamis.
-Profil Saya: Anda sekarang memiliki pilihan yang lebih eksplisit untuk mengedit ikon Gravatar Anda.
-Spotlight: Sekarang mengindeks pos dan halaman!
+Pengunggahan sekarang tidak disinkronkan!
+Halaman yang gagal diunggah akan diberi tanda merah.
+Bidang input untuk menulis komentar sekarang bisa sampai 5 baris.
