--- a/Scripts/fastlane/metadata/ja/release_notes.txt
+++ b/Scripts/fastlane/metadata/ja/release_notes.txt
@@ -1,7 +1,3 @@
-投稿リスト、アクセシビリティ:投稿リストで Dynamic Type フォントの処理が改善されました。
-投稿リスト:新規投稿ステータスおよび投稿者フィルターバー。
-投稿リスト、アクセシビリティ:新規投稿ステータスと投稿者フィルターバーで VoiceOver に対応。
-ログイン、アクセシビリティ:ログインフローでの Dynamic Type の処理が改善されました。
-メニュー、アクセシビリティ:サイトのメニューセクションで Dynamic Type がサポートされるようになりました。
-プロフィール:Gravatar アイコンの編集に使用できる明示的なオプションが追加されました。
-スポットライト:投稿とページにインデックスが付けられるようになりました。
+アップロードが現在非同期です。
+アップロードに失敗した固定ページは赤色でマークされます。
+コメントを書き込むための入力フィールドは、5行まで拡張されました。
