--- a/Scripts/fastlane/metadata/tr/release_notes.txt
+++ b/Scripts/fastlane/metadata/tr/release_notes.txt
@@ -1,7 +1,3 @@
-Gönderi Listesi, Erişilebilirlik: Gönderi listesi artık Dinamik Tür yazı tiplerini daha iyi destekliyor.
-Gönderi Listesi: Yeni gönderi durumu ve yazar filtresi çubuğu!
-Gönderi Listesi, Erişilebilirlik: Yeni gönderi durumu ve yazar filtresi çubuğu, Voiceover’ı destekler.
-Oturum Açma, Erişilebilirlik: Oturum açma akışı artık Dinamik Tür yazı tiplerini daha iyi destekliyor.
-Menüler, Erişilebilirlik: Sitenizdeki Menü bölümü artık Dinamik Tür yazı tiplerini destekliyor.
-Profilim: Gravatar simgenizi düzenlemeye yönelik daha açık seçenekler eklendi.
-Gündem: Artık gönderi ve sayfaları dizinliyor!
+Yüklemeler artık eş zamanlı değil!
+Yüklenemeyen sayfalar artık kırmızıyla işaretlenecek.
+Yorum yazılan giriş alanı artık 5 satıra kadar çıkabilir.
