--- a/Scripts/fastlane/metadata/zh-Hans/release_notes.txt
+++ b/Scripts/fastlane/metadata/zh-Hans/release_notes.txt
@@ -1,7 +1,3 @@
-文章列表，辅助功能：文章列表现在可以更好地处理 Dynamic Type 字体。
-文章列表：全新文章状态和作者过滤栏！
-文章列表，辅助功能：新的文章状态和作者过滤栏提供语音支持。
-登录，辅助功能：登录流程现在可以更好地处理 Dynamic Type。
-菜单，辅助功能：站点的“菜单”部分现在支持 Dynamic Type。
-我的个人资料：现在，我们提供了明确用于编辑 Gravatar 图标的选项。
-显著特点：现在可以将文章和页面编入索引！
+现在，上传操作是异步的！
+现在，上传失败的页面将会标记为红色。
+现在，您最多可以在发表评论的输入字段中输入 5 行文字。
