--- a/Scripts/fastlane/metadata/zh-Hant/release_notes.txt
+++ b/Scripts/fastlane/metadata/zh-Hant/release_notes.txt
@@ -1,7 +1,3 @@
-文章清單，協助工具：文章清單現在能妥善地處理「動態類型」字型。
-文章清單：全新的文章狀態和作者篩選列！
-文章清單，協助工具：全新的文章狀態和作者篩選列會提供 Voiceover 支援。
-登入，協助工具：登入流程現在能妥善地處理「動態類型」。
-選單，協助工具：網站的「選單」區段現在會支援「動態類型」。
-我的個人檔案：你現在可以使用更明確的選項來編輯你的 Gravatar 圖示。
-焦點：立刻將文章和頁面加入索引吧！
+上傳現在並非同步作業！
+無法上傳的頁面現在已標示為紅色。
+撰寫留言的輸入欄位現在已擴充為 5 行。
