--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -5,8 +5,7 @@
 * [*] Comments can be filtered to show the most recent unreplied comments from other users. [#16215]
 
 * [*] Fixed the navigation bar color in dark mode. [#16348]
-
-* [**] A new author can be chosen for Posts and Pages for sites with multiple authors. [#16269, #16301, #16281]
+* [**] A new author can be chosen for Posts and Pages on multi-author sites. [#16269, #16281, #16349]
 
 17.2
 -----
